log
Thu 16 May 2024 09:08:31 PM UTC: 
 tests:  0|5
total_score: 0/70
ace7bbc
Thu 16 May 2024 09:19:35 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
0bafe1a
Thu 16 May 2024 09:23:27 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:20: error: expected expression before ‘int’
   61 |             while (int k != 9){
      |                    ^~~
sudoku.c:65:16: error: ‘k’ undeclared (first use in this function)
   65 |                k++
      |                ^
sudoku.c:65:16: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:19: error: expected ‘;’ before ‘}’ token
   65 |                k++
      |                   ^
      |                   ;
   66 |             }
      |             ~      
Compilation failed
f42f87f
Thu 16 May 2024 09:23:47 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
565d98b
Thu 16 May 2024 09:28:47 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
sudoku.c: In function ‘is_final’:
sudoku.c:78:1: error: control reaches end of non-void function [-Werror=return-type]
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
01f52fb
Thu 16 May 2024 09:29:00 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
91875be
Thu 16 May 2024 09:29:16 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
e4acfed
Thu 16 May 2024 09:32:04 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81f5456
Thu 16 May 2024 09:33:08 PM UTC: 
 sudoku.c | 14 ++------------
 1 file changed, 2 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
16fa442
Thu 16 May 2024 09:39:21 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  4|3
total_score: 30/70
9fc7659
Thu 16 May 2024 09:40:10 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  4|3
total_score: 30/70
29392c2
Thu 16 May 2024 09:41:51 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
8c4cd18
Thu 16 May 2024 09:42:08 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
3f201c1
